updates add get proficiencies by class clean up some styling add ability bonuses to get race
